--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "14.14.41",
+    "git-commit-msg-linter": "^4.5.0",
     "nodemon": "2.0.7",
     "typescript": "4.2.4"
   }
