chore(PACKAGES): add nodemon, dotenv & ts-node

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 
     /* Additional Checks */
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
