--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/express/server.ts --watch"
   },
   "keywords": [],
   "author": "Rafael Lima 'Zeero'",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "fp-ts": "2.9.5",
     "io-ts": "^2.2.16",
@@ -22,7 +23,8 @@
     "@types/express": "^4.17.15",
     "@types/node": "14.14.41",
     "git-commit-msg-linter": "^4.5.0",
-    "nodemon": "2.0.7",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "4.2.4"
   }
 }
