--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "nodemon src/express/server.ts --watch"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "git-commit-msg-linter": "^4.5.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.1",
-    "typescript": "4.2.4"
+    "typescript": "4.2.4",
+    "vitest": "^0.27.1"
   }
 }
