--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "express": "^4.18.2",
     "fp-ts": "2.9.5",
     "io-ts": "^2.2.16",
-    "io-ts-types": "^0.5.16"
+    "io-ts-types": "^0.5.16",
+    "lodash": "^4.17.21",
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.15",
+    "@types/lodash": "^4.14.191",
     "@types/node": "14.14.41",
     "git-commit-msg-linter": "^4.5.0",
     "nodemon": "^2.0.7",
