--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "lodash": "^4.17.21",
+    "pino": "^8.11.0",
+    "pino-http": "^8.3.3",
+    "pino-pretty": "^9.3.0",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
