--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.15",
     "@types/lodash": "^4.14.191",
     "@types/node": "14.14.41",
+    "@types/ramda": "^0.28.23",
     "git-commit-msg-linter": "^4.5.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.9.1",
