--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pino": "^8.11.0",
     "pino-http": "^8.3.3",
     "pino-pretty": "^9.3.0",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
