--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pino-http": "^8.3.3",
     "pino-pretty": "^9.3.0",
     "ramda": "^0.28.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "ts-adt": "^2.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
