--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "fp-ts": "2.9.5",
+    "fp-ts-contrib": "^0.1.29",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "lodash": "^4.17.21",
